--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>Todo lo que querés saber sobre la cerveza</title>
-</head> 
 <link rel="stylesheet" href="./estilo.ccs"
+</head> 
 <body> 
     <h1>La cerveza</h1>
 
