--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>Todo lo que querés saber sobre la cerveza</title>
-<link rel="stylesheet" href="./estilo.ccs"
+<link rel="stylesheet" href="./estilo.css/style.css"
 </head> 
 <body> 
     <h1>La cerveza</h1>
